fix: extra margin-bottom hero padding

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -654,6 +654,7 @@ span.navigation:before {
     position: relative;
     padding: 0;
     margin-top: 2.0rem;
+    margin-bottom: 0;
 
     li {
         text-align: center;
